# drug_nme

./: LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: test.yml
FDA-NME-scraper/: scrape.py
Tutorial/: 01_Fetch_Data.ipynb  02_plot_pharmacology.ipynb  03_FDAScraper.ipynb  FDADataFetcher.ipynb  FDAScraper.ipynb  Fetch.ipynb  Fetch_Data.ipynb  PharmacologyDataFetcher.ipynb  tutorial.ipynb
Tutorials/: 01_FDAScraper.ipynb  01_Fetch_Data.ipynb  02_plot_pharmacology.ipynb  03_FDAScraper.ipynb  04_target_info.ipynb
data/: FDAData.csv  PharmacologyData.csv  README.md
drug_nme/: __init__.py  fetch.py  plot.py  scrape.py  target.py  utils.py
fda_nme/: fetch.py  scrape.py
scrape/: README.md  __init__.py  scrape.py
tests/: test_installation.py
